# fastjsonrpc

./: .pre-commit-config.yaml  Makefile  README.md  isort_test.py  pyproject.toml  research.md  sample.py  setup.cfg
.github/workflows/: test.yml
fastjsonrpc/: __init__.py  exceptions.py  handler.py  localclient.py  router.py  schemas.py  websocket.py
tests/: __init__.py  test_jsonrpc.py  test_localclient.py  test_websocket.py
