[tool.poetry]
name = "fastjsonrpc"
version = "0.0.1"
description = ""
authors = ["sasano8 <y-sasahara@ys-method.com>"]
license = "MIT"
readme = "README.md"
# repository = "https://github.com/sasano8/asy"

[tool.poetry.dependencies]
python = ">=3.8,<=3.9.*"
fastapi = "^0.70.1"
pydantic = "^1.9.0"


[tool.poetry.dev-dependencies]
pre-commit = "^2.12.0"
black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^3.9.0"
mypy = "^0.812"
pytest = "^6.2.2"
requests = "^2.26.0"

[build-system]
requires = "poetry>=0.12"
build-backend = "poetry.masonry.api"
